[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "throttled"
version = "0.11"
description = "Fix Intel CPU throttling on Linux"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dbus-python>=1.3.2",
    "pygobject>=3.48.2",
]

[project.scripts]
throttled = "throttled:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
